@@ -2482,12 +2482,12 @@ inline void FString::_assign (const wchar_t* s)
 //----------------------------------------------------------------------
 inline void FString::_insert (uInt pos, uInt len, const wchar_t* s)
 {
+  if ( len == 0 )  // String s is a null or a empty string
+    return;
+
   if ( ! string )
   {
     // string is null
-
-    if ( len == 0 )  // String s is also a null string
-      return;
 
     length = len;
     bufsize = FWDBUFFER + length + 1;
@@ -2512,7 +2512,7 @@ inline void FString::_insert (uInt pos, uInt len, const wchar_t* s)
     if ( (length + len + 1) <= bufsize )
     {
       // output string <= bufsize
-      for (x = length; x + 1 > pos; x--)  // shifting right side  + '\0'
+      for (x = length; x + 1 > pos; x--)  // shifting right side + '\0'
         string[x + len] = string[x];
 
       for (x = 0; x < len; x++)           // insert string
